--- a/client/index.html
+++ b/client/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Subscription Manager</title>
+    <meta name="google-site-verification" content="_prV3FbeofFbQNjrqIsQW1nDhIaK1T6ejGWwHvDI9kM" />
   </head>
   <body>
     <div id="root"></div>
